core/test/scala/neg/corner1.check
error: Content is not allowed in trailing section.
  xml"<foo></foo>>"
                 ^